flaging mines && game restart mechanic

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,9 +1,10 @@
 @charset "UTF-8";
 
 // base
-@import 'base/base';
-@import 'base/fonts';
+@import "base/base";
+@import "base/fonts";
+@import "base/variables";
 
 // componenets
-@import 'components/app';
-@import 'components/board';
+@import "components/app";
+@import "components/game";
