board styling changes

--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -1,7 +1,11 @@
 // colors
 $c-black: #000;
 $c-white: #fff;
-$c-danger: #eb3434;
+$c-danger: #ad2b0e;
+$c-dark-blue: #66818c;
+$c-light-blue: #ccdbe0;
 
 $primary-color: $c-black;
 $secondary-color: $c-white;
+$board-color: $c-dark-blue;
+$board-color-active: $c-light-blue;
