--- a/src/assets/styles/components/_app.scss
+++ b/src/assets/styles/components/_app.scss
@@ -1,6 +1,7 @@
 .rm-app {
   display: flex;
-  height: 100vh;
   justify-content: center;
   align-items: center;
+  height: 100vh;
+  background-color: rgba($board-color-active, 0.2);
 }
