--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,10 +1,13 @@
 @charset "UTF-8";
 
 // base
-@import "base/base";
 @import "base/fonts";
 @import "base/variables";
+@import "base/base";
 
 // componenets
 @import "components/app";
+@import "components/board";
+@import "components/buttons";
 @import "components/game";
+@import "components/modal";
